--- a/com.bytedance.FeiShu/com.bytedance.FeiShu.yml
+++ b/com.bytedance.FeiShu/com.bytedance.FeiShu.yml
@@ -30,8 +30,6 @@ modules:
     # 对于非开源软件来说则是准备环境
     build-commands:
       - install -D -m0755 -t /app/bin/ feishu-launcher.sh
-      # 拷贝解压必备的 ar
-      - cp /usr/bin/ar /app/bin/
       - mkdir -p /app/lib
       - cp /usr/lib/x86_64-linux-gnu/libbfd* /app/lib/
       # 库放这里就好了
@@ -54,10 +52,13 @@ modules:
         # 这里我们写一个解压并搬文件的脚本
         commands:
           - mkdir feishu-temp
+          # - set -x
+          # - ls -l
+          # - export LANG=C
           - bsdtar -xf feishu.deb
           # - ls
           # - pwd
-          - tar xf data.tar --directory=feishu-temp
+          - tar xf data.tar.xz --directory=feishu-temp
           # 把文件搬出来一点
           - mv feishu-temp/opt/bytedance/feishu feishu
           # 清理一下
