--- a/.github/workflows/cosbrowser.yml
+++ b/.github/workflows/cosbrowser.yml
@@ -5,7 +5,6 @@ on:
     paths:
       - com.tencent.COSBrowser/*
       - .github/workflows/cosbrowser.yml
-
 jobs:
   test-build-cosbrowser:
     runs-on: ubuntu-latest
@@ -15,7 +14,7 @@ jobs:
       options: --privileged
     steps:
       - name: 检出代码
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           submodules: recursive
       - name: 构建 Flatpak
@@ -23,8 +22,10 @@ jobs:
         with:
           bundle: com.tencent.COSBrowser.flatpak
           manifest-path: com.tencent.COSBrowser/com.tencent.COSBrowser.yml
+          cache-key: cosbrowser
       - name: 上传 Artifact
         uses: actions/upload-artifact@v4
         with:
           name: com.tencent.COSBrowser.flatpak
           path: com.tencent.COSBrowser.flatpak
+          compression-level: 0
